@@ -1,3 +1,12 @@
+1991-04-04  dickey@software.org
+
+	* src/version.h:
+	mods to recover/proceed when 'chdir()' works but 'getwd()'
+	does not (execute, but no read permission in path).
+
+	* src/ded.c, src/dedscan.c, src/dedring.c:
+	guard against 'getwd()' failure.
+
 1991-04-01  dickey@software.org
 
 	* src/version.h:
